[package]
name = "corrssy"
version = "0.1.0"
edition = "2021"
authors = ["MorphyKutay"]
description = "CORS Vulnerability Scanner"
license = "GPL-3.0"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
futures = "0.3"

[build-dependencies]
winres = "0.1"

[package.metadata.windows]
icon = "assets/icon.ico"
